--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>Rust WebGl Rendering</title>
     </head>
     <body>
-        <canvas id="webgl" width="640" height="480"></canvas>
+        <canvas id="webgl"></canvas>
     <script type="text/javascript" src="index.js"></script></body>
 </html>
